Adjusted hero image and text and fixed the spacing on the titles at mobile sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -779,7 +779,7 @@ MEDIA QUERIES
 
     .topsection {
         padding: 20px 0;
-        background-image: url(../img/scarf_crop.png);
+        background-image: url(../img/scarf_crop.jpg);
         background-size: cover;
     }
 
